# busy-me

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: release.yml
Resources/: icon.icns
homeassistant/: README.md
homeassistant/custom_components/busy_me_ha/: __init__.py  config_flow.py  const.py  hidraw.py  light.py  manifest.json  services.yaml
macos/: Info.plist
scripts/: build-dmg.sh  generate-icon.sh  make-icon.py
src/: audio_monitor.rs  busylight.rs  config.rs  icons.rs  main.rs  sleep_monitor.rs  webhook.rs
