[package]
name = "busy-me"
version = "0.1.0"
edition = "2021"
description = "System tray app that monitors mic/speaker usage and controls a USB busylight"
authors = ["bp"]

[dependencies]
tray-icon = "0.19"
tao = "0.30"
hidapi = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
ureq = { version = "3", features = ["json"] }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"

[target.'cfg(target_os = "macos")'.build-dependencies]
coreaudio-sys = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
    "Devices_Enumeration",
    "Media_Capture",
    "Win32_Media_Audio",
    "Win32_Devices_Properties",
    "Win32_System_Com",
    "Foundation",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
